--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <h1 class="post-title post-title--index"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
 
       <div class="post-date post-date--index">
-        {{ post.date | date: "%D" }}
+        {{ post.date | date: "%e %B %Y" }} - {{ post.date | date: "%H:%M" }}
       </div>
 
     </article>
